--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<span class="form-title__important"> Образцы упаковки бесплатно!
 									</span>
 								</div>
-								<form action="mailer/smart.php" method="POST" class="form">
+								<form action="smart.php" method="POST" class="form">
 									<input class="form__input" type="tel" name="user_phone" required placeholder="Введите номер телефона">
 									<button class="button button_big" type="submit">Оставить заявку!</button>
 								</form>
